--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@ zombies[zombieNum] = new zombie(800,200,false);
 
 //Initial function to set shit up
 function init() {
-	blood.src = 'blood.png';
-	map.src = 'map.png';
-	hero.src = 'hero.png';
-	bulletImg.src = 'bullet.png';
-	zombieImg.src = 'zombie.png';
-	zombieDeadImg.src = 'zombieDead.png';
+	blood.src = 'img/blood.png';
+	map.src = 'img/map.png';
+	hero.src = 'img/hero.png';
+	bulletImg.src = 'img/bullet.png';
+	zombieImg.src = 'img/zombie.png';
+	zombieDeadImg.src = 'img/zombieDead.png';
         ctx.drawImage(map, 0, 0);
 		ctx.drawImage(zombieImg, 800, 200); //hardcoding x and y for now. Remember to change this
 		ctx.drawImage(hero, 30,200);
@@ -61,7 +61,7 @@ function init() {
 	
 //Main loop to listen for keypresses and check for collisions, etc
 function doGameLoop() {
-	hero.src = 'hero.png';
+	hero.src = 'img/hero.png';
 	ctx.drawImage(map, 0,0);
     ctx.drawImage(hero, heroX, heroY);
 	for(var j = 0; j < zombies.length; j++) {
