--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 </head>
 <body onload="init()">
 <canvas id="map" width="1100" height="600"></canvas>
+
+<script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
+<script type="text/javascript" src="js/gameQuery-0.7.1.js"></script>
 <script type="text/javascript" src="js/game.js"></script>
 </body>
 </html>
