--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel='stylesheet' href='css/styles.css' type='text/css' media='all' />
 <title>Funky Zombie Killer</title>
 </head>
 <body onload="init()">
-<canvas id="map" width="1100" height="600"></canvas>
+
+<div id="container">
+	<canvas id="map" width="1100" height="600"></canvas>
+</div><!-- #container -->
+
 <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
 <script type="text/javascript" src="js/gameQuery-0.7.1.js"></script>
 <script type="text/javascript" src="js/gameQuery-sound.0.6.js"></script>
