Adjust html and css to make the page look better on 1366x768 screens.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Funky Zombie Killer</title>
 </head>
 <body onload="init()">
-
+<h1>Funky Zombie Killer</h1>
 <div id="container">
 	<canvas id="map" width="1100" height="600"></canvas>
 </div><!-- #container -->
