--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link href='http://fonts.googleapis.com/css?family=Creepster' rel='stylesheet' type='text/css'>
 <link rel='stylesheet' href='css/styles.css' type='text/css' media='all' />
 <title>Funky Zombie Killer</title>
 </head>
