--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <div id="container">
 	<canvas id="map" width="1100" height="600"></canvas>
 </div><!-- #container -->
+<h2>Use the arrow keys to move, spacebar to shoot, and escape to pause.</h2>
 
 <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
 <script type="text/javascript" src="js/game.js"></script>
