--- a/index.html
+++ b/index.html
@@ -1,16 +1,35 @@
 <!DOCTYPE html>
 <html>
+<!-------------------------------------------------------------------------------
+//    Funky Zombie Killer                                                      //
+//    Copyright (C) 2015  Zack Reithmeyer                                      //
+//                                                                             //
+//    This program is free software: you can redistribute it and/or modify     //
+//    it under the terms of the GNU General Public License as published by     //
+//    the Free Software Foundation, either version 3 of the License, or        //
+//    (at your option) any later version.                                      //
+//                                                                             //
+//    This program is distributed in the hope that it will be useful,          //
+//    but WITHOUT ANY WARRANTY; without even the implied warranty of           //
+//    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the            //
+//    GNU General Public License for more details.                             //
+//                                                                             //
+//    You should have received a copy of the GNU General Public License        //
+//    along with this program.  If not, see <http://www.gnu.org/licenses/>.    //
+-------------------------------------------------------------------------------->
 <head>
 <link href='http://fonts.googleapis.com/css?family=Creepster' rel='stylesheet' type='text/css'>
 <link rel='stylesheet' href='css/styles.css' type='text/css' media='all' />
 <title>Funky Zombie Killer</title>
 </head>
 <body onload="init()">
-<h1>Funky Zombie Killer</h1>
 <div id="container">
 	<canvas id="map" width="1100" height="600"></canvas>
 </div><!-- #container -->
 <h2>Use the arrow keys to move, spacebar to shoot, and escape to pause.</h2>
+<div id="footer">
+	Copyright (C) 2015 Zack Reithmeyer.	This work is licensed under the <a href="http://www.gnu.org/licenses/gpl-3.0.txt">GPL v3</a>.
+</div>
 
 <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
 <script type="text/javascript" src="js/game.js"></script>
