Added reloading and kick ability.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<meta charset="utf-8" />
 <!-------------------------------------------------------------------------------
 //    Funky Zombie Killer                                                      //
 //    Copyright (C) 2015  Zack Reithmeyer                                      //
@@ -21,11 +22,12 @@
 <link href='http://fonts.googleapis.com/css?family=Creepster' rel='stylesheet' type='text/css'>
 <link rel='stylesheet' href='css/styles.css' type='text/css' media='all' />
 <title>Funky Zombie Killer</title>
+
 </head>
 <body onload="init()">
 <div id="container">
 	<canvas id="map" width="1100" height="600"></canvas>
-</div><!-- #container -->
+</div> <!-- #container -->
 <h2>Use the arrow keys to move, spacebar to shoot, and escape to pause.</h2>
 <div id="footer">
 	Copyright (C) 2015 Zack Reithmeyer.	This work is licensed under the <a href="http://www.gnu.org/licenses/gpl-3.0.txt">GPL v3</a>.
