Added second zombie type.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
 	<audio id="kill">
 		<source src="audio/kill.mp3" type="audio/mpeg">
 	</audio>
+	<audio id="death">
+		<source src="audio/death.mp3" type="audio/mpeg">
+	</audio>
 </div>	
 <div id="container">
 	<canvas id="map" width="1100" height="600"></canvas>
