--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
 	<audio id="death">
 		<source src="audio/death.mp3" type="audio/mpeg">
 	</audio>
+	<audio id="catKill">
+		<source src="audio/catKill.mp3" type="audio/mpeg">
+	</audio>
 </div>	
 <div id="container">
 	<canvas id="map" width="1100" height="600"></canvas>
