Added start menu and storyline.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <title>Funky Zombie Killer</title>
 
 </head>
-<body onload="init()">
+<body onload="startMenu()">
 <div id="audio">
 	<audio id="music" loop autoplay>
 		<source src="audio/funky.mp3" type="audio/mpeg">
