Added gun switching.

--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
 	<audio id="bulletFire">
 		<source src="audio/bulletFire.mp3" type="audio/mpeg">
 	</audio>
-	<audio id="reload">
-		<source src="audio/reload.mp3" type="audio/mpeg">
+	<audio id="rifleReload">
+		<source src="audio/rifleReload.mp3" type="audio/mpeg">
+	</audio>
+	<audio id="handgunReload">
+		<source src="audio/handgunReload.mp3" type="audio/mpeg">
 	</audio>
 	<audio id="kick">
 		<source src="audio/kick.mp3" type="audio/mpeg">
