--- a/index.html
+++ b/index.html
@@ -64,5 +64,7 @@
 
 <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
 <script type="text/javascript" src="js/game.js"></script>
+<script type="text/javascript" src="js/shop.js"></script>
+<script type="text/javascript" src="js/menu.js"></script>
 </body>
 </html>
