--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 	<audio id="catKill">
 		<source src="audio/catKill.mp3" type="audio/mpeg">
 	</audio>
+	<audio id="bass">
+		<source src="audio/bass.mp3" type="audio/mpeg">
+	</audio>
 </div>	
 <div id="container">
 	<canvas id="map" width="1100" height="600"></canvas>
