--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
 	<audio id="bass">
 		<source src="audio/bass.mp3" type="audio/mpeg">
 	</audio>
+	<audio id="pump">
+		<source src="audio/pump.mp3" type="audio/mpeg">
+	</audio>
+	<audio id="shotgunReload">
+		<source src="audio/shotgunReload.mp3" type="audio/mpeg">
+	</audio>
 </div>	
 <div id="container">
 	<canvas id="map" width="1100" height="600"></canvas>
