Added shop music.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 	<audio id="music" loop autoplay>
 		<source src="audio/funky.mp3" type="audio/mpeg">
 	</audio>
+	<audio id="altMusic" loop>
+		<source src="audio/slowFunk.mp3" type="audio/mpeg">
+	</audio>
 	<audio id="bulletFire">
 		<source src="audio/bulletFire.mp3" type="audio/mpeg">
 	</audio>
